# sotonhack_26

./: .gitignore  README.md  downloaded.webm
backend/: main.py  package-lock.json  package.json  pyproject.toml
backend/controllers/: daily_summary_controller.py  hello_controller.py  speech_controller.py
backend/models/: models.py
backend/routers/: db_router.py  dotenv_router.py  forum_router.py  speech_router.py  transcribe_router.py
backend/test/: dotenv_test.py
backend/tests/: ask_questions.sh  db-testing.py  db_router_api_test.sh  gemini_prompt_test.py  hello_test.py  supabase_storage_test.py  upload_download_webm.py
backend/utils/: database.py  dotenv_utils.py  supabase_storage.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ForumRecordingOverlay.jsx  elevenlabs.js
