[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.39.0",
    "elevenlabs>=2.39.0",
    "fastapi>=0.134.0",
    "motor>=3.6.1",
    "dnspython>=2.7.0",
    "httpx>=0.28.1",
    "google>=3.0.0",
    "google-genai>=1.67.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.41.0",
    "pydub>=0.25.1",
]
